--- a/.gitignore
+++ b/.gitignore
@@ -1,121 +1,162 @@
 # -------------------------------------------------------------------------
-# 1. Сборка (Build System) - Генерируемые файлы/папки
-# -------------------------------------------------------------------------
+# 1. Сборка (Build out) и Cmake - Генерируемые файлы/папки.
 # Все, что генерирует CMake, должно быть в отдельной папке.
 # Если вы используете 'in-source' сборку, исключите файлы CMakeLists.txt, но это не рекомендуется.
 # Рекомендуется использовать 'out-of-source' сборку, например, в папку 'build/'
+# -------------------------------------------------------------------------
+# 1.1 Папки вывода: Основные каталоги для "out-of-source" сборки (генерируется CMake).
+# -------------------------------------------------------------------------
 /build/
 /out/
+
+# -------------------------------------------------------------------------
+# 1.2 Файлы зависимостей: Генерируются компилятором (например, GCC) для отслеживания зависимостей между исходными и заголовочными файлами, чтобы ускорить инкрементальную сборку.
+# -------------------------------------------------------------------------
 *.d
 *.dep
 
 # -------------------------------------------------------------------------
-# Compiled Object files
+# 2. Объектные Файлы и Библиотеки (Generated Artifacts).
+# Это артефакты, созданные компилятором и линковщиком, которые не являются исполняемым кодом.
 # -------------------------------------------------------------------------
-*.slo
+# 2.1 Объектные файлы (Compiled Object files)
+# Промежуточный код, полученный после компиляции одного исходного файла (до линковки).
+# .obj — обычно MSVC, .o — GCC/Clang.
+# -------------------------------------------------------------------------
 *.o
 *.obj
+*.slo
 *.lo
 
 # -------------------------------------------------------------------------
-# Compiled Static libraries
+# 2.2 Статические библиотеки (Compiled Static libraries)
+# Архив объектных файлов, которые линкер встраивает в исполняемый файл.
+# .a — GCC/Clang (Linux/macOS), .lib — MSVC (Windows).
 # -------------------------------------------------------------------------
-*.lai
-*.la
 *.a
 *.lib
 
 # -------------------------------------------------------------------------
-# Compiled Dynamic libraries
+# 2.3 Libtool Archives: Файлы, используемые инструментом GNU Libtool для управления библиотеками.
+# -------------------------------------------------------------------------
+*.lai
+*.la
+
+# -------------------------------------------------------------------------
+# 2.4 Динамические библиотеки (Compiled Dynamic libraries)
+# Код, который загружается в память программы во время её выполнения.
+# .so — Linux, .dylib — macOS, .dll — Windows.
 # -------------------------------------------------------------------------
 *.so
 *.dylib
 *.dll
 
 # -------------------------------------------------------------------------
-# Linker files
+# 2.5 Линкер (Linker files) (VS)
+# -------------------------------------------------------------------------
+# Файл инкрементального линкера: Генерируется Visual Studio для ускорения инкрементальной (пошаговой) линковки.
 # -------------------------------------------------------------------------
 *.ilk
+# -------------------------------------------------------------------------
+# Файл карты линкера: Содержит карту расположения функций и переменных в памяти, используется для отладки.
+# -------------------------------------------------------------------------
+*.map	
 
 # -------------------------------------------------------------------------
-# Executables
+# 2.6 Предкомпилированные заголовки (Precompiled Headers)
+# Файлы, созданные для ускорения компиляции путем предварительной обработки часто используемых заголовочных файлов.
+# -------------------------------------------------------------------------
+*.gch
+*.pch
+
+# -------------------------------------------------------------------------
+# 3. Исполняемые Файлы (Executables)
+# Файлы, которые могут быть запущены операционной системой
+# *.exe	Исполняемый файл Windows: Основной формат программ в Windows.
+# *.out	Исполняемый файл по умолчанию: Имя по умолчанию, присваиваемое GCC/Clang в Unix-подобных системах (a.out).
+# *.app	Пакет приложения macOS: Папка, маскирующаяся под единый исполняемый файл приложения в macOS.
 # -------------------------------------------------------------------------
 *.exe
 *.out
 *.app
 
 # -------------------------------------------------------------------------
-# 2. Файлы отладки и трассировки
+# 4. Отладка и Трассировка (Debugging & Dumps)
+# Файлы, содержащие отладочную информацию, дампы памяти или метаданные.
 # -------------------------------------------------------------------------
-# Файлы дампа (dumps) и отладочные символы
-*.suo
-*.user
-*.ncb
-*.sbr
-*.map
-*.stackdump
-*.trc
+# *.pdb	База данных программы (Program Database) - файл, генерируемый компиляторами MSVC, содержащий отладочные символы для Visual Studio Debugger.
+# *.dwo	Файлы DWARF object - отдельные файлы отладочной информации, используемые GCC/Clang для уменьшения размера объектных файлов.
+# core, *.core	Core dump - дамп памяти программы в момент её аварийного завершения (Unix/Linux).
+# *.stackdump	Стек дамп - трассировка стека при аварийном завершении, часто генерируется MinGW/MSYS2.
+# *.trc	Файл трассировки - общий формат для журналов или трассировки выполнения.
+# -------------------------------------------------------------------------
+*.pdb
+*.dwo
 core
 *.core
+*.stackdump
+*.trc
 
 # -------------------------------------------------------------------------
-# Precompiled Headers
+# 5. Файлы IDE и Кэш
 # -------------------------------------------------------------------------
-*.gch
-*.pch
-
-# ------------------------------------------------------------------------
-# Debugger Files
-# ------------------------------------------------------------------------
-*.pdb
-
+# 5.1 IDE: Visual Studio (Windows)
+# Проектные файлы и папки VS (скрытые, временные): Содержат настройки проекта, решения и пользовательские опции.
+# *.vcxproj.filters
+# *.vcxproj.user
 # -------------------------------------------------------------------------
-# Debug information files
-# -------------------------------------------------------------------------
-*.dwo
-
-# -------------------------------------------------------------------------
-# Linker files
-# -------------------------------------------------------------------------
-*.ilk
-
-# -------------------------------------------------------------------------
-# 3. IDE: Visual Studio (Windows)
-# -------------------------------------------------------------------------
-# Проектные файлы и папки VS (скрытые, временные)
 /.vs/
 *.sln
-*.vcxproj
-*.vcxproj.filters
-*.vcxproj.user
+*.vcxproj*
 *.opensdf
 
 # -------------------------------------------------------------------------
-# 4. IDE: VS Code
+#  Visual Studio (устраревшие)
+# Устаревшие файлы VS: Файлы пользовательских опций, базы данных символов и броузерной информации.
+*.suo
+*.user
+*.ncb
+*.sbr	
+
 # -------------------------------------------------------------------------
-# Настройки рабочей области VS Code
+# 5.2 IDE: VS Code
+# Фвйлы рабочей области, задачи, конфигурации запуска
+# -------------------------------------------------------------------------
 .vscode/
 
 # -------------------------------------------------------------------------
-# 5. IDE: JetBrains (CLion, Rider, IntelliJ)
+# 5.3 IDE: JetBrains (CLion)
+# Папка настроек и кэша проектов JetBrains - кэш, индекс, пользовательские настройки
 # -------------------------------------------------------------------------
-# Папка настроек и кэша проектов JetBrains
 .idea/
 
 # -------------------------------------------------------------------------
-# 6. IDE: Xcode (macOS)
+# 5.4 IDE: Xcode (macOS)
+# Папка сборки Xcode и кэш. Промежуточные файлы сборки, кэш и пользовательские состояния (закладки, открытые файлы)
+# *.xcodeproj*
+# *.xcworkspace*
+# *.xcodeproj/project.xcworkspace/
+# *.xcworkspace/contents.xcworkspacedata
 # -------------------------------------------------------------------------
-# Папка сборки Xcode и кэш
 /DerivedData/
-*.xcodeproj/project.xcworkspace/
-*.xcworkspace/contents.xcworkspacedata
+*.xcodeproj*
+*.xcworkspace*
 *.xcuserstate
 
 # -------------------------------------------------------------------------
-# 7. Разное/Системные
+# 6. Разное/Системные
+# Временные файлы macOS, Linux, Windows
 # -------------------------------------------------------------------------
-# Временные файлы macOS, Linux
+# Файл метаданных macOS: Хранит настройки просмотра папки (иконки, расположение).
+# -------------------------------------------------------------------------
 .DS_Store
+
+# -------------------------------------------------------------------------
+# Временные файлы Linux/Windows: Резервные копии, созданные редакторами (Vim, Emacs, MS Office).
 *~
 ~$*
+
+# -------------------------------------------------------------------------
+# Файл миниатюр Windows: Кэш эскизов изображений в папке.
+# -------------------------------------------------------------------------
 Thumbs.db
