--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
 # -------------------------------------------------------------------------
 # 1. Сборка (Build out) и Cmake - Генерируемые файлы/папки.
 # Все, что генерирует CMake, должно быть в отдельной папке.
-# Если вы используете 'in-source' сборку, исключите файлы CMakeLists.txt, но это не рекомендуется.
 # Рекомендуется использовать 'out-of-source' сборку, например, в папку 'build/'
 # -------------------------------------------------------------------------
 # 1.1 Папки вывода: Основные каталоги для "out-of-source" сборки (генерируется CMake).
+# build*/ вместо /build/, чтобы охватить build-debug, build-release и подобные
 # -------------------------------------------------------------------------
-/build/
-/out/
+/build*/
+/out*/
+# -------------------------------------------------------------------------
+# В случае случайной in-source сборки — игнорируем временные файлы CMake
+# -------------------------------------------------------------------------
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
 
 # -------------------------------------------------------------------------
 # 1.2 Файлы зависимостей: Генерируются компилятором (например, GCC) для отслеживания зависимостей между исходными и заголовочными файлами, чтобы ускорить инкрементальную сборку.
@@ -153,6 +160,7 @@ core
 
 # -------------------------------------------------------------------------
 # Временные файлы Linux/Windows: Резервные копии, созданные редакторами (Vim, Emacs, MS Office).
+# -------------------------------------------------------------------------
 *~
 ~$*
 
@@ -160,3 +168,24 @@ core
 # Файл миниатюр Windows: Кэш эскизов изображений в папке.
 # -------------------------------------------------------------------------
 Thumbs.db
+
+# -------------------------------------------------------------------------
+# 7. Тестовые артефакты
+# Если используются Google Test, логирование или другие фреймворки
+# -------------------------------------------------------------------------
+test-results/
+*.log
+
+# -------------------------------------------------------------------------
+Сохранить папку logs/ в репозитории, но без файлов
+# -------------------------------------------------------------------------
+logs/*
+!logs/.gitkeep
+
+# -------------------------------------------------------------------------
+# 8. AI/IDE вспомогательные файлы
+# Если используют AI-помощники или расширения
+# -------------------------------------------------------------------------
+.codeium/
+copilot.*
+
