--- a/.gitignore
+++ b/.gitignore
@@ -109,12 +109,9 @@ core
 # -------------------------------------------------------------------------
 # 5.1 IDE: Visual Studio (Windows)
 # Проектные файлы и папки VS (скрытые, временные): Содержат настройки проекта, решения и пользовательские опции.
-# *.vcxproj.filters
-# *.vcxproj.user
 # -------------------------------------------------------------------------
 /.vs/
-*.sln
-*.vcxproj*
+*.vcxproj.user # Исключаем только пользовательские настройки, но не проект
 *.opensdf
 
 # -------------------------------------------------------------------------
@@ -127,9 +124,15 @@ core
 
 # -------------------------------------------------------------------------
 # 5.2 IDE: VS Code
-# Фвйлы рабочей области, задачи, конфигурации запуска
+# Файлы рабочей области, задачи, конфигурации запуска
+# Исключаем только пользовательские настройки, но ВКЛЮЧАЕМ общие (launch.json - конфигурация отладки, tasks.json - конфигурации задач), 
+# в командном проекте эти файлы часто должны быть в репозитории для унификации среды разработки команды. 
 # -------------------------------------------------------------------------
-.vscode/
+.vscode/*.user
+.vscode/settings.json
+# Игнорируем весь кэш
+.vscode/ipch/
+
 
 # -------------------------------------------------------------------------
 # 5.3 IDE: JetBrains (CLion)
@@ -140,12 +143,12 @@ core
 # -------------------------------------------------------------------------
 # 5.4 IDE: Xcode (macOS)
 # Папка сборки Xcode и кэш. Промежуточные файлы сборки, кэш и пользовательские состояния (закладки, открытые файлы)
-# *.xcodeproj*
-# *.xcworkspace*
+# .xcodeproj включен явно, т.к. может быть использована генерация не тольсо с помощью Cmake
 # *.xcodeproj/project.xcworkspace/
 # *.xcworkspace/contents.xcworkspacedata
 # -------------------------------------------------------------------------
 /DerivedData/
+*.xcodeproj
 *.xcodeproj*
 *.xcworkspace*
 *.xcuserstate
