--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # -------------------------------------------------------------------------
 /build*/
 /out*/
+
 # -------------------------------------------------------------------------
 # В случае случайной in-source сборки — игнорируем временные файлы CMake
 # -------------------------------------------------------------------------
@@ -129,9 +130,8 @@ core
 # в командном проекте эти файлы часто должны быть в репозитории для унификации среды разработки команды. 
 # -------------------------------------------------------------------------
 .vscode/*.user
-.vscode/settings.json
-# Игнорируем весь кэш
-.vscode/ipch/
+.vscode/*.db
+.vscode/ipch/   # Игнорируем весь кэш
 
 
 # -------------------------------------------------------------------------
@@ -139,6 +139,7 @@ core
 # Папка настроек и кэша проектов JetBrains - кэш, индекс, пользовательские настройки
 # -------------------------------------------------------------------------
 .idea/
+cmake-build-*/
 
 # -------------------------------------------------------------------------
 # 5.4 IDE: Xcode (macOS)
