--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@
 # Рекомендуется использовать 'out-of-source' сборку, например, в папку 'build/'
 # -------------------------------------------------------------------------
 # 1.1 Папки вывода: Основные каталоги для "out-of-source" сборки (генерируется CMake).
-# build*/ вместо /build/, чтобы охватить build-debug, build-release и подобные
+# build*/ вместо build/, чтобы охватить build-debug, build-release и подобные
 # -------------------------------------------------------------------------
-/build*/
-/out*/
+build*/
+out*/
 
 # -------------------------------------------------------------------------
 # В случае случайной in-source сборки — игнорируем временные файлы CMake
@@ -111,7 +111,7 @@ core
 # 5.1 IDE: Visual Studio (Windows)
 # Проектные файлы и папки VS (скрытые, временные): Содержат настройки проекта, решения и пользовательские опции.
 # -------------------------------------------------------------------------
-/.vs/
+.vs/
 *.vcxproj.user # Исключаем только пользовательские настройки, но не проект
 *.opensdf
 
@@ -148,7 +148,7 @@ cmake-build-*/
 # *.xcodeproj/project.xcworkspace/
 # *.xcworkspace/contents.xcworkspacedata
 # -------------------------------------------------------------------------
-/DerivedData/
+DerivedData/
 *.xcodeproj
 *.xcodeproj*
 *.xcworkspace*
