modify ex-09-01-union-data-variant. Add struct Variant

--- a/09-union-enum-bit-fields/ex-09-01-union-data-variant/src/CMakeLists.txt
+++ b/09-union-enum-bit-fields/ex-09-01-union-data-variant/src/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_executable(union_data_variant__app main.cpp)
+add_library(variant Variant.cpp)
+add_executable(union_data_variant_app main.cpp)
+target_link_libraries(union_data_variant_app variant)
